# AIEngine

./: CMakeLists.txt  Dependencies.cmake  README.md
App/: CMakeLists.txt
App/Source/: EditorLayer.cpp  EditorLayer.hpp  TestLayer.cpp  TestLayer.hpp  main.cpp
App/Source/Panels/: MenuBar.cpp  MenuBar.hpp  TestWindow.cpp  TestWindow.hpp
App/Source/Renderer/: Camera.hpp
Core/: CMakeLists.txt
Core/Source/: Application.cpp  Application.hpp  Event.hpp  ImguiIncludes.hpp  ImguiLayer.cpp  ImguiLayer.hpp  Keycodes.hpp  Layer.hpp  Logger.cpp  Logger.hpp  Panel.hpp  Window.cpp  Window.hpp
Core/Source/Events/: KeyEvents.hpp  MouseEvents.hpp  WindowEvents.hpp
Core/Source/Renderer/: BufferElement.hpp  Camera.cpp  Camera.hpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Resources/: vert.glsl
